# lexafrica

./: .gitignore  README.md  package-lock.json  package.json  render.yaml
backend/: .env.example  Cargo.toml  package-lock.json  package.json  railway.toml
backend/migrations/: 20240101000000_init.sql
backend/src/: auth.rs  main.rs
backend/src/api/: auth.rs  cases.rs  chat.rs  courses.rs  mod.rs
backend/src/models/: cases.rs  courses.rs  db.rs  mod.rs  user.rs
backend/src/services/: ai.rs
backend/src/workers/: ai_summarizer.rs  mod.rs
backend/supabase/.temp/: pooler-url
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/courses/: page.tsx
frontend/src/app/exam-prep/: page.tsx
frontend/src/app/prep/: page.tsx
frontend/src/components/: AppDownload.tsx  AuthGuard.tsx  LexaChat.tsx  OnboardingModal.tsx
frontend/src/lib/: supabase.ts
mobile/: README.md  pubspec.yaml
mobile/lib/: main.dart
mobile/lib/pages/: chat_page.dart  library_page.dart
mobile/lib/pages /dashboard/: dashboard.dart
mobile/linux/: CMakeLists.txt
mobile/linux/runner/: my_application.cc
mobile/web/: index.html  manifest.json
supabase/.temp/: project-ref
supabase/migrations/: 20240101000000_init.sql  20240224000000_production_ready.sql  20240224000001_courses_setup.sql  20240224000002_real_legal_data.sql  20240224083500_lexa_chat_persistence.sql  20240224090000_nigerian_law_seeding.sql  20260224000001_nigerian_law_content.sql  20260224000002_jurisprudence_and_preview.sql
(+1 files in other folders)
