[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "uuid", "json", "chrono"] }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "10.3.0"
tower-http = { version = "0.6.8", features = ["cors", "trace", "auth"] }
reqwest = { version = "0.13.2", features = ["json"] }
pgvector = { version = "0.4.1", features = ["sqlx"] }
